back to original docker file

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,8 @@
 FROM node:18-alpine AS base
-
-FROM base AS deps
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
-
-
-FROM base AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-RUN yarn build && ls -l /app/.next
-
-FROM base AS runner
-WORKDIR /app
+RUN npm install
+RUN npm run build
 ENV NODE_ENV production
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-
 EXPOSE 3000
 CMD ["npm", "start"]
