changed RUN npc

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,7 @@ COPY package*.json ./
 RUN npm install
 COPY prisma ./prisma
 
-RUN npm prisma generate 
+RUN npx prisma generate 
 COPY . .
 EXPOSE 4000
 CMD ["node", "index.js"]
